chore: enhance Prettier check to auto-format on failure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run prettier check
-        run: pnpm prettier:check
+        run: |
+          pnpm prettier:check || (
+            echo "Prettier check failed, running format..." &&
+            pnpm prettier:format
+          )
 
   eslint-check:
     name: Eslint check
